--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -5,14 +5,14 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
+<link rel="canonical" href="https://www.scentree.co/_/allergenes.html" />
 <!--ADD FAVICON -->
 <link rel="icon" type="image/png" href="../img/logotfav.png" />
 <!-- Titre de la page -->   
 <title lang="fr">ScenTree - The allergens_Les allergènes</title>
 <title lang="en">ScenTree - The allergens_Les allergènes</title>
 <!--Description Google-->
-<meta name="description" content="Linalol, Limonène, Eugénol, Salicylate de Benzyl, tant de molécules chimiques dangereuses ? .. Venez découvrir les secrets des ingrédients présents dans nos parfums. " />
+<meta name="description" content="Linalol, Limonène, Eugénol, Salicylate de Benzyl, tant de molécules chimiques dans vos parfums ? .. Venez découvrir les secrets de ces ingrédients souvent diabolisés. " />
 <!-- Bootstrap -->
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
