--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -12,7 +12,8 @@
 <title lang="fr">ScenTree - The allergens_Les allergènes</title>
 <title lang="en">ScenTree - The allergens_Les allergènes</title>
 <!--Description Google-->
-<meta name="description" content="Linalol, Limonène, Eugénol, Salicylate de Benzyl, tant de molécules chimiques dans vos parfums ? .. Venez découvrir les secrets de ces ingrédients souvent diabolisés. " />
+<meta name="description" lang="fr" content="Linalol, Limonène, Eugénol, Salicylate de Benzyl, tant de molécules chimiques dans vos parfums ? .. Venez découvrir les secrets de ces ingrédients souvent diabolisés. " />
+<meta name="description" lang="en" content="Je suis une description en EN" />
 <!-- Bootstrap -->
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -167,7 +168,7 @@ crossorigin=""/>
 <div class="col-12 text-center gros_titre">
   <h1 class="gros_titre text-in-color-brown">
     <span lang="fr">NOS PARFUMS SONT-ILS DE DANGEREUX ALLERGENES ?</span>
-    <span lang="en">ARE OUR PERFUME DANGEROUS ?</span>
+    <span lang="en">ARE OUR PERFUMES A DANGEROUS SOURCE OF ALLERGIES?</span>
   </h1>
 </div>
 
@@ -180,14 +181,14 @@ crossorigin=""/>
       Doit-on avoir peur des extraits, molécules et ingrédients de nos parfums ? (Provoquent-ils des allergies ?)
       <br>Les ingrédients allergènes présentent-ils un danger pour le consommateur ?
     </span>
-    <span lang="en">Is there a reason to fear our perfume ingredients ? Are allergenic compounds dangerous for the costumer ?</span>
+    <span lang="en">Is there a reason to fear our perfume ingredients and molecules ? Are allergenic compounds dangerous for the consumer ?</span>
   </h2>
 
 
 
   <h3 class="sous_titre">
     <span lang="fr">Introduction – Les molécules inscrites sur le flacon de nos parfum</span>
-    <span lang="en">Introduction – Molecules on our cosmetic products packaging</span>
+    <span lang="en">Introduction – Molecules on our perfume labels</span>
   </h3>
   <p style="text-align: center;">
     <img class="img1allergene" lang="fr" src="../img/loupeallergens.jpg" alt="Packaging produit cosmétique et allergènes" title="Packaging produit cosmétique et allergènes">
@@ -197,7 +198,7 @@ crossorigin=""/>
   <p>
     <span lang="fr"><i><a class="interpop" href="../ingredients/Linalool__Linalol_A®.html" target="_BLANK">Linalol</a>, <a class="interpop" href="../ingredients/D-Limonene__Limonène-D.html" target="_BLANK">Limonène</a>, <a class="interpop" href="../ingredients/Eugenol__Eugénol.html" target="_BLANK">Eugénol</a>, <a class="interpop" href="../ingredients/Benzyl_Salicylate__Salicylate_de_Benzyle.html" target="_BLANK">Salicylate de Benzyl</a></i>… Vous avez sans doute déjà remarqué le nom de ces molécules sur le flacon de vos parfums. Elles sont partout ! Il s’agit de molécules qualifiées « d’<b>allergènes</b> ». Comme souvent, <u>les molécules "chimiques", et notamment les allergènes, font peur</u>. Certaines marques créent même des parfums « sans allergènes » afin d’attirer une clientèle soucieuse de sa santé et effrayée par la présence de tant de molécules inconnues. Ces allégations sont surtout mises en place pour rassurer les consommateurs. Or, nous allons voir ici que <u>certaines de ces molécules ne provoquent pas nécessairement d'allergies</u> et que <b class="bplus">leur impact est souvent dramatisé</b></span>
 
-    <span lang="en"><i><a class="interpop" href="../ingredients/Linalool__Linalol_A®.html" target="_BLANK">Linalool</a>, <a class="interpop" href="../ingredients/D-Limonene__Limonène-D.html" target="_BLANK">Limonene</a>, <a class="interpop" href="../ingredients/Eugenol__Eugénol.html" target="_BLANK">Eugenol</a>, <a class="interpop" href="../ingredients/Benzyl_Salicylate__Salicylate_de_Benzyle.html" target="_BLANK">Benzyl Salicylate</a></i>... You have probably already noticed the names of these molecules on the packaging of your cosmetic products. They're everywhere! They are molecules called "<b>allergens</b>". As is often the case, <u>ingredients of synthetic origin, especially allergens, are frightening</u>. Some brands even create "allergen-free" fragrances to attract health-conscious customers who are afraid of so many unknown ingredients. These claims are mainly put in place to reassure consumers. However, we will see here that <u>some of these ingredients are not necessarily "dangerous"</u> and that <b class="bplus">their impact is often dramatized</b>.</span>
+    <span lang="en"><i><a class="interpop" href="../ingredients/Linalool__Linalol_A®.html" target="_BLANK">Linalool</a>, <a class="interpop" href="../ingredients/D-Limonene__Limonène-D.html" target="_BLANK">Limonene</a>, <a class="interpop" href="../ingredients/Eugenol__Eugénol.html" target="_BLANK">Eugenol</a>, <a class="interpop" href="../ingredients/Benzyl_Salicylate__Salicylate_de_Benzyle.html" target="_BLANK">Benzyl Salicylate</a></i>... You have probably already noticed the names of these molecules on the label of your perfumes. They're everywhere! They are molecules called "<b>allergens</b>". As is often the case, <u>molecules, especially allergens, are frightening</u>. Some brands even create "allergen-free" fragrances to attract health-conscious customers who are afraid of so many unknown molecules. These claims are mainly put in place to reassure consumers. However, we will see here that <u>some of these molecules do not necessarily provoke allergies</u> and that <b class="bplus">their impact is often dramatized</b>.</span>
   </p>
 
 
@@ -211,9 +212,9 @@ crossorigin=""/>
     <br>A noter également que certains extraits et certaines molécules réputées allergènes le sont <u>uniquement lorsqu'un facteur annexe s'installe et induit une transformation chimique</u>. C'est le cas notamment de certains extraits et de certaines molécules qui, au contact du soleil, peuvent s'oxyder et devenir de puissants allergènes. 
     <br>Les allergies peuvent alors se manifester sous la forme de plaques rouges, de picotements etc. Le comité scientifique pour la sécurité des consommateurs a répertorié <b class="bplus">54 molécules et 28 extraits naturels pouvant provoquer une allergie chez l’Homme</b>. Cette dernière liste n’est <u>pas exploitée dans le milieu de la parfumerie</u>.</span>
 
-    <span lang="en">In the composition of our fragrances worn and used every day, <b class="bplus">26 known allergens may exist</b>. This list of 26 molecules and extracts is dictated by <a href="https://eur-lex.europa.eu/legal-content/fr/ALL/?uri=CELEX%3A32009R1223" target="_blank">Annex III of the European Cosmetic Regulation 1223/2009</a>. These are molecules which, <b class="bplus">when present in significant quantities</b>, may have the ability to bind to a protein present in our skin. This can lead to a reaction of our immune system and thus cause an allergic reaction.
-    <br>It should also be noted that certain substances known to be allergenic are so <u>only when an additional factor sets in and induces a transformation of the molecule</u>. This is the case of certain ingredients that oxidise in light to become powerful allergens.
-    <br>Allergic reactions can then manifest themselves in the form of red patches, tingling, etc. The Scientific Committee for Consumer Safety has listed <b class="bplus">54 molecules and 28 natural extracts that can cause an allergic reaction for humans</b>. This latter list is <u>not used in the perfume industry</u>.</span>
+    <span lang="en">In the composition of our fragrances worn and used every day, <b class="bplus">26 known allergens may exist</b>. This list of 26 molecules and extracts is dictated by <a href="https://eur-lex.europa.eu/legal-content/fr/ALL/?uri=CELEX%3A32009R1223" target="_blank">Annex III of the European Cosmetic Regulation 1223/2009</a>. These are molecules which, <b class="bplus">when present in significant quantities</b>, may have the ability to bind to a protein present in our skin. This can lead to an allergy involving our immune system and thus cause an allergic reaction.
+    <br>It should also be noted that some molecules known to be allergenic are so <u>only when an additional factor sets in and induces a transformation of the molecule</u>. This is the case of some molecules that oxidise in light to become powerful allergens.
+    <br>Allergies can then manifest themselves in the form of red patches, tingling, etc. The Scientific Committee for Consumer Safety has listed <b class="bplus">54 molecules and 28 natural extracts that can cause an allergy for humans</b>. This latter list is <u>not used in the perfume industry</u>.</span>
   </p>
 
   <p style="text-align: center;">
@@ -227,7 +228,7 @@ crossorigin=""/>
   </h3>
   <p>
     <span lang="fr"><b class="bplus">En Europe, ces allergies concernent seulement 1 à 3% de la population.</b> Cela signifie que vous avez une à trois chances sur cent d’être allergique à l'une des 26 substances listées par la réglementation cosmétique. A cela s'ajoute le fait qu'un parfum contient très rarement, voir jamais, ces 26 allergènes ensemble. </span>
-    <span lang="en"><b class="bplus">In Europe, these allergic reactions affect only 1 to 3% of the population.</b> This means that you have one to three chances in one hundred of being sensitive to at least one of the 26 substances listed by the cosmetic regulations.</span>
+    <span lang="en"><b class="bplus">In Europe, these allergic reactions affect only 1 to 3% of the population.</b> This means that you have one to three chances in one hundred of being allergic to at least one of the 26 substances listed by the cosmetic regulations.</span>
   </p>
 
   <h3 class="sous_titre">
@@ -238,7 +239,7 @@ crossorigin=""/>
   
   <p>
     <span lang="fr">Alors, <b class="bplus">la réglementation cosmétique impose plusieurs mesures.</b> <u>Ces mesures sont prises pour que chaque personne, allergique ou non, puisse consommer les produits contenant du parfum présents sur le marché.</u> Si vous n’êtes allergique à aucune des substances, ces mesures n’ont pas d’utilité pour vous.</span>
-    <span lang="en">So, <b class="bplus">cosmetic regulations impose several measures</b>. <u>These measures are taken so that every person, allergic or not, can consume the perfumed products on the market</u>. If you are not allergic to any of the substances, these measures are of no use to you.</span>
+    <span lang="en">So, <b class="bplus">cosmetic regulations impose several measures</b>. <u>These measures are taken so that every person, allergic or not, can consume the perfumes on the market</u>. If you are not allergic to any of the substances, these measures are of no use to you.</span>
   </p>
 
   <p style="text-align: center;">
@@ -263,13 +264,13 @@ crossorigin=""/>
     <span lang="fr"><b class="bplus">Dans les produits rincés</b>, la présence d’un allergène ne doit pas excéder <b class="bplus">100 ppm</b> (soit 0,01%) dans le produit fini. <b class="bplus">Dans les produits non-rincés</b>, cette présence ne doit pas excéder <b class="bplus">10 ppm</b> (0,001%).
     <br>Par ailleurs, tout allergène présent à un taux supérieur à celui recommandé entraine sa mention sur le flacon du produit.</span>
     <span lang="en">In <b class="bplus">rinsed products</b>, the presence of an allergen must not exceed <b class="bplus">100 ppm</b> (i.e. 0.01%) in the finished product. In <b class="bplus">non-rinsed products</b>, the presence of an allergen shall not exceed <b class="bplus">10 ppm</b> (0.001%). 
-    <br>In addition, any allergen used at a higher level than the recommended one must be mentioned on the product packaging.</span>
+    <br>In addition, any allergen used at a higher level than the recommended one must be mentioned on the product label.</span>
   </p>
 
 
   <h3 class="sous_titre">
       <span lang="fr">Quel est le danger ?</span>
-      <span lang="en">What do we risk ?</span>
+      <span lang="en">What is the danger ?</span>
   </h3>
 
   <p>
