--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -13,7 +13,7 @@
 <title lang="en">ScenTree - The allergens_Les allergènes</title>
 <!--Description Google-->
 <meta name="description" lang="fr" content="Linalol, Limonène, Eugénol, Salicylate de Benzyl, tant de molécules chimiques dans vos parfums ? .. Venez découvrir les secrets de ces ingrédients souvent diabolisés. " />
-<meta name="description" lang="en" content="Je suis une description en EN" />
+<meta name="description" lang="en" content="Linalool, Limonene, Eugenol, Benzyl Salicylate, so many chemical molecules in your perfumes ? ... Come and discover the secrets of these demonized ingredients." />
 <!-- Bootstrap -->
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
