--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -12,7 +12,7 @@
 <title lang="fr">ScenTree - Sources</title>
 <title lang="en">ScenTree - Sources</title>
 <!--Description Google-->
-<meta name="description" content="ScenTree, la nouvelle classification innovante et collaborative des matières premières utilisées en parfumerie. Voyagez dans l'univers merveilleux des odeurs." />
+<meta name="description" content="Cette page réunie l'ensemble des ouvrages, documents scientifiques, études consultées lors de la création de la base de donnée de ScenTree." />
 <!-- Bootstrap -->
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -179,9 +179,9 @@ crossorigin=""/>
 <div class="sources col-12 mt-3">
       <p class="mt-2 m-0 p-0 text-center"><b><span lang="fr" class="text-center">Général</span><span lang="en"> Général</span></b></p>
     <ul>
-      <li>Nez Edition, “Nez, la revue olfactive”, #1, #2, #3, #4, #5, #6, #7, #8, 2016-2019.</li>
+      <li><a class="interpop" href="https://www.nez-larevue.fr/" target ="_BLANK">Nez éditions, “Nez, la revue olfactive”, #1, #2, #3, #4, #5, #6, #7, #8, 2016-2019.</li>
       <li><a class="interpop" href="https://www.perfumerflavorist.com/" target ="_BLANK"> https://www.perfumerflavorist.com </a></li>
-      <li><a class="interpop" href="https://www.thegoodscentscompany.com" target ="_BLANK"> https://www.thegoodscentscompany.com </a></li>
+      <li><a class="interpop" href="http://www.thegoodscentscompany.com" target ="_BLANK"> http://www.thegoodscentscompany.com </a></li>
       <li><a class="interpop" href="https://www.givaudan.com" target ="_BLANK"> https://www.givaudan.com </a></li>
       <li><a class="interpop" href="https://www.firmenich.com" target ="_BLANK"> https://www.firmenich.com </a></li>
       <li><a class="interpop" href="https://www.iff.com" target ="_BLANK"> https://www.iff.com </a></li>
