--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -179,9 +179,9 @@ crossorigin=""/>
 <div class="sources col-12 mt-3">
       <p class="mt-2 m-0 p-0 text-center"><b><span lang="fr" class="text-center">Général</span><span lang="en"> Général</span></b></p>
     <ul>
-      <li><a class="interpop" href="https://www.nez-larevue.fr/" target ="_BLANK">Nez éditions, “Nez, la revue olfactive”, #1, #2, #3, #4, #5, #6, #7, #8, 2016-2019.</li>
+      <li><a class="interpop" href="https://www.nez-larevue.fr/" target ="_BLANK">Nez éditions </a>, “Nez, la revue olfactive”, #1, #2, #3, #4, #5, #6, #7, #8, 2016-2019.</li>
       <li><a class="interpop" href="https://www.perfumerflavorist.com/" target ="_BLANK"> https://www.perfumerflavorist.com </a></li>
-      <li><a class="interpop" href="http://www.thegoodscentscompany.com" target ="_BLANK"> http://www.thegoodscentscompany.com </a></li>
+      <li><a class="interpop" rel="nofollow" href="http://www.thegoodscentscompany.com" target ="_BLANK"> http://www.thegoodscentscompany.com </a></li>
       <li><a class="interpop" href="https://www.givaudan.com" target ="_BLANK"> https://www.givaudan.com </a></li>
       <li><a class="interpop" href="https://www.firmenich.com" target ="_BLANK"> https://www.firmenich.com </a></li>
       <li><a class="interpop" href="https://www.iff.com" target ="_BLANK"> https://www.iff.com </a></li>
