--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -5,14 +5,14 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
+<link rel="canonical" href="https://www.scentree.co/_/Sources.html">
 <!--ADD FAVICON -->
 <link rel="icon" type="image/png" href="../img/logotfav.png" />
 <!-- Titre de la page -->   
 <title lang="fr">ScenTree - Sources</title>
 <title lang="en">ScenTree - Sources</title>
 <!--Description Google-->
-<meta name="description" content="Cette page réunie l'ensemble des ouvrages, documents scientifiques, études consultées lors de la création de la base de donnée de ScenTree." />
+<meta name="description" content="Afin de garantir toute transparence, nous avons crée cette page qui réunie l'ensemble des ouvrages, sites internet, documents scientifiques et autres études consultés lors de la création de la base de donnée de ScenTree. " />
 <!-- Bootstrap -->
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -179,7 +179,7 @@ crossorigin=""/>
 <div class="sources col-12 mt-3">
       <p class="mt-2 m-0 p-0 text-center"><b><span lang="fr" class="text-center">Général</span><span lang="en"> Général</span></b></p>
     <ul>
-      <li><a class="interpop" href="https://www.nez-larevue.fr/" target ="_BLANK">Nez éditions </a>, “Nez, la revue olfactive”, #1, #2, #3, #4, #5, #6, #7, #8, 2016-2019.</li>
+      <li><a class="interpop" href="https://www.nez-larevue.fr/" target ="_BLANK">Nez éditions</a>, “Nez, la revue olfactive”, #1, #2, #3, #4, #5, #6, #7, #8, 2016-2019.</li>
       <li><a class="interpop" href="https://www.perfumerflavorist.com/" target ="_BLANK"> https://www.perfumerflavorist.com </a></li>
       <li><a class="interpop" rel="nofollow" href="http://www.thegoodscentscompany.com" target ="_BLANK"> http://www.thegoodscentscompany.com </a></li>
       <li><a class="interpop" href="https://www.givaudan.com" target ="_BLANK"> https://www.givaudan.com </a></li>
