--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -177,7 +177,7 @@ crossorigin=""/>
 </p>
 
 <div class="sources col-12 mt-3">
-      <h4><p class="mt-2 m-0 p-0 text-center"><b class="bplus"><span lang="fr" class="text-center">Général</span><span lang="en"> Général</span></b></p></h4>
+      <h3><p class="mt-2 m-0 p-0 text-center"><b class="bplus"><span lang="fr" class="text-center">Général</span><span lang="en"> Général</span></b></p></h3>
     <ul>
       <li><a class="interpop" href="https://www.nez-larevue.fr/" target ="_BLANK">Nez éditions</a>, “Nez, la revue olfactive”, #1, #2, #3, #4, #5, #6, #7, #8, 2016-2019.</li>
       <li><a class="interpop" href="https://www.perfumerflavorist.com/" target ="_BLANK"> https://www.perfumerflavorist.com </a></li>
@@ -194,7 +194,7 @@ crossorigin=""/>
 </div>
 
 <div class="sources col-12 mt-3">
-      <h4><p class="mt-2 m-0 p-0 text-center"><b class="bplus"><span lang="fr" class="text-center">Naturels</span><span lang="en">Naturals</span></b></p></h4>
+      <h3><p class="mt-2 m-0 p-0 text-center"><b class="bplus"><span lang="fr" class="text-center">Naturels</span><span lang="en">Naturals</span></b></p></h3>
         <ul>
           <li>K.V. Peter. WP Woodhead Publishing. "Handbook of herbs and spices - Volume 1". 2nd Edition, 2012. 634 pages. ISBN 978-0-85709-039-3</li>
           <li>K.V. Peter. WP Woodhead Publishing. "Handbook of herbs and spices - Volume 2". 2nd Edition, 2012. 634 pages. ISBN 978-0-85709-040-9</li>
@@ -213,7 +213,7 @@ crossorigin=""/>
     </div>
 
 <div class="sources col-12 mt-3">
-      <h4><p class="mt-2 m-0 p-0 text-center"><b class="bplus"><span lang="fr" class="text-center">Synthétiques</span><span lang="en">Synthetics</span></b></p></h4>
+      <h3><p class="mt-2 m-0 p-0 text-center"><b class="bplus"><span lang="fr" class="text-center">Synthétiques</span><span lang="en">Synthetics</span></b></p></h3>
         <ul>
           <li>Horst Surburg, Johannes Panten, “Common Fragrance and Flavor Materials”, 5th edition, completely revised and enlarged edition 2006. 325 pages. ISBN: 3-527-31315-X.</li>
           <li>Michael and Irene Ash, Synapse Information Resources, Inc., “Handbook of Flavors and Fragrances”, 2006, 1790 pages. ISBN: 1-934764-28-0</li>
@@ -229,7 +229,7 @@ crossorigin=""/>
 
 
 <div class="sources col-12 mt-3 mb-3">
-    <h3><p class="mt-2 m-0 p-0 text-center"><b><span lang="fr" class="text-center">Réglementation</span><span lang="en">Regulatory</span></b></p></h3>
+    <h3><p class="mt-2 m-0 p-0 text-center"><b class="bplus"><span lang="fr" class="text-center">Réglementation</span><span lang="en">Regulatory</span></b></p></h3>
     <ul>
       <li>American Herbal Products Association, Zoë Gardner, Michael Mc Guffin, “Botanical Safety Handbook”, Second Edition, 2013, 1029 pages. ISBN : 978-1-4665-1695-3</li>
       <li><a class="interpop" href="https://ifrafragrance.org/safe-use/standards-guidance" target ="_BLANK"> https://ifrafragrance.org/safe-use/standards-guidance </a></li>
