--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -171,10 +171,12 @@ crossorigin=""/>
 
 <div class="col-12 pagederoulante text-justify scrollbarblockgauche"> 
 
-<p class="mt-3">
-  <span lang="fr">Afin de donner naissance à la classification <i>ScenTree</i> il a été nécessaire d'approfondir nos connaissances en <h2 class="maskedtitle">parfumerie</h2> en utilisant de nombreux ouvrages traitant des matières premières. La liste ci-dessous constitue la <h2 class="maskedtitle">bibligraphie</h2> du projet : </span>
-  <span lang="en">To create <i>ScenTree</i> classification, it has been necessary to deepen our <h2 class="maskedtitle">perfumery</h2> knowledge by using diverse works about raw materials. The following list is the project <h2 class="maskedtitle">bibliography</h2>: </span>
-</p>
+<h2 class="maskedtitle">
+ <p class="mt-3">
+  <span lang="fr">Afin de donner naissance à la classification <i>ScenTree</i> il a été nécessaire d'approfondir nos connaissances en parfumerie en utilisant de nombreux ouvrages traitant des matières premières. La liste ci-dessous constitue la bibligraphie du projet : </span>
+  <span lang="en">To create <i>ScenTree</i> classification, it has been necessary to deepen our perfumery knowledge by using diverse works about raw materials. The following list is the project bibliography: </span>
+ </p>
+</h2>
 
 <div class="sources col-12 mt-3">
       <h3><p class="mt-2 m-0 p-0 text-center"><b class="bplus"><span lang="fr" class="text-center">Général</span><span lang="en"> Général</span></b></p></h3>
