--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -171,11 +171,9 @@ crossorigin=""/>
 
 <div class="col-12 pagederoulante text-justify scrollbarblockgauche"> 
 
-<h2 class="maskedtitle">
- <p class="mt-3">
+<h2 class="maskedtitle mt-3">
   <span lang="fr">Afin de donner naissance à la classification <i>ScenTree</i> il a été nécessaire d'approfondir nos connaissances en parfumerie en utilisant de nombreux ouvrages traitant des matières premières. La liste ci-dessous constitue la bibligraphie du projet : </span>
   <span lang="en">To create <i>ScenTree</i> classification, it has been necessary to deepen our perfumery knowledge by using diverse works about raw materials. The following list is the project bibliography: </span>
- </p>
 </h2>
 
 <div class="sources col-12 mt-3">
