--- a/html/_/creationparfum.html
+++ b/html/_/creationparfum.html
@@ -204,7 +204,7 @@ crossorigin=""/>
       <span lang="en">The consumer as a target for making the perfume</span>
     </h2>
     <p>
-      <span lang="fr">Tout commence par le <b>besoin d’un consommateur</b>. Le client souhaite acheter un parfum qui lui correspond, qui lui plait. Il peut vouloir respecter les <b>tendances</b>, ou s’affirmer à travers une originalité olfactive. <b class="bplus">Ce sont les envies du consommateur que les marques souhaitent toucher.</b></span>
+      <span lang="fr">Tout commence par le <b>besoin d’un consommateur</b>. Le client souhaite acheter un parfum qui lui correspond, qui lui plait. Il peut vouloir respecter les <b>tendances</b>, ou s’affirmer à travers une originalité olfactive. <b class="bplus">Ce sont les envies du consommateur que les entreprises souhaitent toucher.</b></span>
       <span lang="en">It all starts with the <b>consumer’s need</b>. The customer wants to buy a perfume that suits him, that he likes. He may want to respect <b>trends</b>, or assert himself through olfactory originality. <b class="bplus">It is the consumer's desires that the brands wish to target.</b></span>
     </p>
   </li>
@@ -235,7 +235,7 @@ crossorigin=""/>
             <span lang="en">"<b>Mass market</b>" perfumes :</span>
           </h3>
           <p>
-            <span lang="fr">Ce sont des parfums créés dans des <b>volumes très importants</b>, possédant très peu, voire pas de marketing, un flacon standard et généralement sobre. Ces produits se retrouvent généralement dans les rayons de nos supermarchés. Leurs prix sont généralement bas, mais la qualité est cependant présente au rendez-vous. </span>
+            <span lang="fr">Ce sont des parfums créés dans des <b>volumes très importants</b>, possédant très peu, voire pas de marketing, un flacon standard et généralement sobre. Ces produits se retrouvent généralement dans les rayons de nos supermarchés. Leurs prix sont bas, mais la qualité est cependant présente au rendez-vous. </span>
             <span lang="en">These are perfumes created in very large quantities, with very poor, if any marketing, a classical bottle and generally sober packaging. These products are generally found on the shelves of our supermarkets. Their prices are low, but quality is there.</span>
           </p>
         </li>
@@ -320,7 +320,7 @@ crossorigin=""/>
           <span lang="en">The perfumer, the creator</span>
         </h2>
         <p>
-          <span lang="fr">Il n’existe pas de méthode de création type. Chaque parfumeur crée à sa manière. Certains travaillent autour de <b>matières premières naturelles</b>, en faisant <b>graviter</b> des matières premières synthétiques autour d’elles pour leur donner des <b>facettes précises</b> ; d’autres traduisent directement leur <b>interprétation du « brief » en matières premières</b>. Le choix des matières premières résulte d’une conviction intime du parfumeur, guidée par l’évaluateur. La création d’un parfum résulte alors d’échanges successifs. Le parfumeur entre sur un logiciel une formule utilisant plusieurs matières premières aux dilutions et proportions souhaitées. Lors de la formulation, une contrainte de <b class="bplus">réglementation</b> doit être respectée. Selon le type de produits dans lequel le parfum sera appliqué, les <b>allergènes</b> et les composés réglementés par l’<b>IFRA</b> ne doivent pas dépasser certains taux d’utilisation (voir notre <a href="../_/allergenes.html" target="_BLANK"> article sur les allergènes en parfumerie</a>).</span>
+          <span lang="fr">Il n’existe pas de méthode de création type. Chaque parfumeur crée à sa manière. Certains travaillent autour de <b>matières premières naturelles</b>, en faisant <b>graviter</b> des molécules synthétiques autour d’elles pour leur donner des <b>facettes précises</b> ; d’autres traduisent directement leur <b>interprétation du « brief » en matières premières</b>. Le choix des ingrédients résulte d’une conviction intime du parfumeur, guidée par l’évaluateur. La création d’un parfum résulte alors d’échanges successifs. Le parfumeur entre sur un logiciel une formule utilisant plusieurs matières premières aux dilutions et proportions souhaitées. Lors de la formulation, une contrainte de <b class="bplus">réglementation</b> doit être respectée. Selon le type de produits dans lequel le parfum sera appliqué, les <b>allergènes</b> et les composés réglementés par l’<b>IFRA</b> ne doivent pas dépasser certains taux d’utilisation (voir notre <a href="../_/allergenes.html" target="_BLANK"> article sur les allergènes en parfumerie</a>).</span>
 
           <span lang="en">There is no standard creation method. Each perfumer creates in his own way. Some work around <b>natural extracts</b>, adding synthetic molecules to give them <b>precise facets</b>; others translate their <b>interpretation of the "brief" directly into raw materials</b>. The choice of raw materials is the result of an intimate conviction on the part of the perfumer, guided by the evaluator. The creation of a perfume is then the result of successive exchanges. The perfumer enters on a software program a formula using several raw materials in the desired dilutions and proportions. During formulation, a <b class="bplus">regulatory</b> constraint must be respected. Depending on the type of product in which the perfume will be applied, the <b>allergens</b> and compounds regulated by the <b>IFRA</b> must not exceed certain amounts of use (see <a href="../_/allergenes.html" target="_BLANK">article about perfume allergens</a>).</span>
         </p>
@@ -352,7 +352,7 @@ crossorigin=""/>
           <span lang="en">Perfume stability, a crucial issue</span>
         </h2>
         <p>
-          <span lang="fr">Lorsqu’un essai est validé par le client, <b class="bplus">la formule est soumise à un ensemble de tests de stabilité</b>. Ceux-ci consistent à soumettre le parfum à diverses conditions de température, de lumière, dans sa base ou non, <b>pour y détecter d’éventuels changements</b> de couleur, d’odeur ou d’apparence. <b class="bplus">Dans le cas d’une instabilité jugée inacceptable, le parfum est « retravaillé »</b>, en traitant le problème à la racine : en remplaçant la (ou les) matière(s) première(s) à l’origine de l’instabilité. Une fois la formule corrigée, de nouveaux tests sont réalisés et le parfum est validé pour envoi au client. Ce dernier peut demander des dernières modifications dans le cas où une instabilité est détectée en interne de sa société.</span>
+          <span lang="fr">Lorsqu’un essai est validé par le client, <b class="bplus">la formule est soumise à un ensemble de tests de stabilité</b>. Ceux-ci consistent à soumettre le parfum à diverses conditions de température, de lumière, dans sa base ou non, <b>pour y détecter d’éventuels changements</b> de couleur, d’odeur ou d’apparence. <b class="bplus">Dans le cas d’une instabilité jugée inacceptable, le parfum est « retravaillé »</b>, en traitant le problème à la racine : en remplaçant les molécules ou extraits à l’origine de l’instabilité. Une fois la formule corrigée, de nouveaux tests sont réalisés et le parfum est validé pour envoi au client. Ce dernier peut demander des dernières modifications dans le cas où une instabilité est détectée en interne de sa société.</span>
           <span lang="en">When a trial is validated by the client, <b class="bplus">the formula is submitted to a pool of stability tests.</b> These consist in submitting the perfume to various conditions of temperature, light, in its base or not, <b>to detect possible changes in color</b>, odor or appearance. <b class="bplus">In the case of instability that is found as unacceptable, the fragrance is "reworked"</b>, treating the problem at its root: replacing the raw material(s) causing the instability. Once the formula has been corrected, new tests are carried out and the fragrance is validated for sending to the client. The latter may request final modifications in the event that instability is detected within his company.</span>
         </p>
     </li>
@@ -363,7 +363,7 @@ crossorigin=""/>
           <span lang="en">Validation by the customer</span>
         </h2>
         <p>
-          <span lang="fr">Après réception de chaque essai créé par chaque société de création, <b class="bplus">le client choisi le parfum qui deviendra celui trouvé dans les rayons de nos parfumeries.</b></span>
+          <span lang="fr">Après réception de chaque formule créé par chaque société de création, <b class="bplus">le client choisi le parfum qui deviendra celui trouvé dans les rayons de nos parfumeries.</b></span>
           <span lang="en">After receiving every perfume trial, made by each creation companies, <b class="bplus">the client chooses the one that will be found in the shelves of our perfume shops.</b></span>
         </p>
     </li>
@@ -374,7 +374,7 @@ crossorigin=""/>
           <span lang="en">Production of the perfume concentrate</span>
         </h2>
         <p>
-          <span lang="fr">La société ayant créé le parfum sélectionné est en charge de lancer le « concentré de parfum » (correspondant au parfum pur, non dilué dans sa base) en production. <b class="bplus">La production d’un concentré de parfum</b> se fait en y mélangeant les matières premières.</span>
+          <span lang="fr">La société ayant créé le parfum sélectionné est en charge de lancer le « concentré de parfum » (correspondant au parfum pur, non dilué dans sa base) en production. <b class="bplus">La fabrication d’un concentré de parfum</b> se fait en y mélangeant les matières premières.</span>
           <span lang="en">The creation company is in charge of launching the "perfume concentrate" (corresponding to the pure perfume, undiluted in its base) in production. The <b class="bplus">making of a perfume concentrate</b> is done by mixing the molecules and extracts.</span>
         </p>
     </li>
@@ -386,7 +386,7 @@ crossorigin=""/>
         </h2>
         <img class="img6creationparfum" src="../img/prodparfum.jpg" alt="Usine de production de parfum" title="Usine de production de parfum">
         <p>
-          <span lang="fr">Il s’en suit l’envoi du concentré dans l’usine de production, appartenant à la marque, une période de « <b>maturation</b> » de ce concentré (et de « <b>macération</b> » dans le cas d’un parfum alcoolique), et la production du produit fini sur les chaînes de production de l’usine de la marque. Le parfum est conditionné dans son packaging, préalablement conçu en interne de la société, ou par un sous-traitant, et envoyé dans les points de vente dédiés.</span>
+          <span lang="fr">Il s’en suit l’envoi du concentré dans l’usine de production de la société de création, une période de « <b>maturation</b> » de ce concentré (et de « <b>macération</b> » dans le cas d’un parfum alcoolique). Une fois le concentré prêt, il est envoyé au client afin que la fabrication du produit fini commence sur les chaînes de production de l’usine de la marque. Le parfum est alors conditionné dans son packaging, préalablement conçu en interne de la société, ou par un sous-traitant, et envoyé dans les points de vente dédiés.</span>
           <span lang="en">This is followed by the sending of the concentrate to the production plant, belonging to the customer, a period of "<b>maturation</b>" of this concentrate (and "<b>maceration</b>" in the case of an alcoholic perfume), and the production of the perfume on the brand’s production lines. The perfume is packaged in its packaging, previously designed in-house or by a subcontractor, and sent to dedicated sales outlets.</span>
         </p>
     </li>
@@ -404,7 +404,7 @@ crossorigin=""/>
 </ol>
 
 <p>
-    <span lang="fr">En somme, <b class="bplus">la création d’un parfum résulte de plusieurs étapes</b>, et demande de nombreuses compétences, pour lesquelles le <b>travail d’équipe</b> est primordial. Tournant autour du consommateur, le parfum est au départ une idée, sublimée par la vision artistique d’un parfumeur, lui-même guidé par l’évaluateur, et aidé par l’assistant de parfumeur. <b class="bplus">La création d’un parfum est l’alliance d’une volonté marketing et artistique, tout en respectant les contraintes de stabilité, de réglementation, de coût et de temps imposées</b>. L’art de la parfumerie réside donc dans la commercialisation d’une œuvre harmonieuse, contournant toute contrainte. Ainsi, <b class="bplus">le parfum est plus que jamais un produit de luxe, de raffinement et d’excellence</b>.</span>
+    <span lang="fr">En somme, <b class="bplus">la création d’un parfum résulte de plusieurs étapes</b>, et demande de nombreuses compétences, pour lesquelles le <b>travail d’équipe</b> est primordial. Tournant autour du consommateur, le parfum est au départ une idée, sublimée par la vision artistique d’un parfumeur, lui-même guidé par l’évaluateur, et aidé par l’assistant de parfumeur. <b class="bplus">La création d’un parfum est l’alliance d’une idée marketing et artistique, tout en respectant les contraintes de stabilité, de réglementation, de coût et de temps imposées</b>. L’art de la parfumerie réside donc dans la commercialisation d’une œuvre harmonieuse, contournant toute contrainte. Ainsi, <b class="bplus">le parfum est plus que jamais un produit de luxe, de raffinement et d’excellence</b>.</span>
     <span lang="en">In short, <b class="bplus">the creation of a perfume is the result of several stages</b>, and requires many skills, for which <b>teamwork is essential</b>. Revolving around the consumer, the perfume is initially an idea, sublimated by the artistic vision of a perfumer, himself guided by the evaluator, and helped by the perfumer assistant. <b class="bplus">The creation of a perfume is the alliance of a marketing and artistic idea, while respecting the constraints of stability, regulation, cost and time imposed</b>. The art of perfumery therefore lies in the marketing of a harmonious perfume, bypassing all constraints. <b class="bplus">Thus, more than ever, perfume is a product of luxury, refinement and excellence</b>.</span>
 </p>
 
