--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -12,7 +12,7 @@
 <title lang="fr">ScenTree - Les ingrédients parfumées</title>
 <title lang="en">ScenTree - Perfume ingredients</title>
 <!--Description Google-->
-<meta name="description" content="Au travers de ScenTree, venez découvrir tous les secrets des ingrédients utilisés par les plus grands parfumeurs pour fabriquer nos parfums. Des huiles essentielles de fleurs, de bois en passant les méthodes d'obtention, apprenez par vous même à connaitre vos parfums.. />
+<meta name="description" content="Au travers de ScenTree, venez découvrir tous les secrets des ingrédients utilisés par les plus grands parfumeurs pour fabriquer nos parfums. Des huiles essentielles de fleurs, de bois en passant les méthodes d'obtention, apprenez par vous même à connaitre vos parfums.. "/>
 <!-- Bootstrap -->
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
