--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -176,15 +176,15 @@ crossorigin=""/>
 <div class="col-12 pagederoulante text-justify scrollbarblockgauche"> 
 
   <h2 class="sous_titre mt-3">
-    <span lang="fr">Comment sont fabriqués les ingrédients qui composent nos parfums ? Du naturel au synthétique, découvrez comment sont faits vos parfums.</span>
+    <span lang="fr">Comment sont fabriqués les molécules et extraits naturels qui composent nos parfums ? Du naturel au synthétique, découvrez comment sont fabriqués vos parfums.</span>
     <span lang="en">How are perfume ingredients made ? From natural to synthetic ingredients, discover how perfumes are made.</span>
   </h2>
 
 
 <p>
-  <span lang="fr">Dans la composition d’un parfum, il est possible d’utiliser environ <b class="bplus">3000 ingrédients différents</b>. La connaissance scientifique autour des essences et des molécules odorantes en recense cependant bien plus. Toutes constituent la <u>palette du parfumeur</u> : cet alphabet qu’il utilise pour raconter des histoires à travers ses parfums.
-  <br>Quelles sont ces matières premières ? Comment les obtient-on ? Quels en sont les particularités et comment cela influe sur leur utilisation ? Entrez dans l’univers passionnant des odeurs ! 
-  <br class="mt-2">Pour commencer, il existe <b class="bplus">trois types de matières premières</b> utilisées dans les parfums :</span>
+  <span lang="fr">Dans la composition d’un parfum, il est possible d’utiliser environ <b class="bplus">3000 ingrédients différents</b>. La connaissance scientifique autour des extraits naturels et des molécules odorantes en recense cependant bien plus. Toutes constituent la <u>palette du parfumeur</u> : cet alphabet qu’il utilise pour raconter des histoires à travers ses parfums.
+  <br>Quel sont ces matières premières ? Comment les fabriques-t-on ? Quels en sont les particularités et comment cela influe sur leur utilisation ? Entrez dans l’univers passionnant des odeurs ! 
+  <br class="mt-2">Pour commencer, il existe <b class="bplus">trois types d'ingrédients</b> utilisés dans les parfums :</span>
 
   <span lang="en">In a perfume composition, it is possible to use around <b class="bplus">3000 different ingredients</b>. However, the scientific knowledge of essences and odorant molecules contains many more ingredients. They all make up the <u>perfumer's palette</u>: the alphabet he uses to tell stories through his fragrances.
   <br>What are these raw materials? How are they obtained? What are their particularities and how does that influence their use? Enter the exciting world of scents !
@@ -194,10 +194,12 @@ crossorigin=""/>
     <div class="card">
       <img class="card-img-top" src="../img/ingredientsnaturels.PNG" title="Les ingrédients naturels proviennent de la flore des 4 coins du monde" alt="Les ingrédients naturels proviennent de la flore des 4 coins du monde">
       <div class="card-body" >
-        <p class="card-title">
+        <h2 class="maskedtitle">
+          <p class="card-title">
           <span lang="fr"><b class="bplus">LES INGREDIENTS NATURELS</b></span>
           <span lang="en"><b class="bplus">NATURAL INGREDIENTS</b></span>
-        </p>
+          </p>
+        </h2>
         <p class="card-text">
           <span lang="fr">Résultent de l’extraction d’un végétal ou, anciennement, d’une matière animale.</span>
           <span lang="en">They result from the extraction of a plant or, formerly, an animal material.</span>
