--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -209,10 +209,12 @@ crossorigin=""/>
     <div class="card">
       <img class="card-img-top" src="../img/synth.PNG" title="Nos sponsors et leurs actualités" alt="Nos sponsors et leurs actualités">
       <div class="card-body">
-        <p class="card-title">
-          <span lang="fr"><b class="bplus">LES INGREDIENTS SYNTHETIQUES</b></span>
-          <span lang="en"><b class="bplus">SYNTHETICS INGREDIENTS</b></span>
-        </p>
+        <h2 class="maskedtitle">
+          <p class="card-title">
+            <span lang="fr"><b class="bplus">LES INGREDIENTS SYNTHETIQUES</b></span>
+            <span lang="en"><b class="bplus">SYNTHETICS INGREDIENTS</b></span>
+          </p>
+        </h2>
         <p class="card-text ">
           <span lang="fr">Obtenus grâce à la (bio)chimie organique.</span>
           <span lang="en">Obtained through organic (bio)chemistry</span>
@@ -222,10 +224,12 @@ crossorigin=""/>
     <div class="card">
       <img class="card-img-top" src="../img/synthétiques1.png" title="Les ingrédients parfums" alt="Les ingrédients parfums">
       <div class="card-body">
-        <p class="card-title">
-          <span lang="fr"><b class="bplus">LES BASES</b></span>
-          <span lang="en"><b class="bplus">BASES</b></span>
-        </p>
+        <h2 class="maskedtitle">
+          <p class="card-title">
+            <span lang="fr"><b class="bplus">LES BASES</b></span>
+            <span lang="en"><b class="bplus">BASES</b></span>
+          </p>
+        </h2>
         <p class="card-text">
           <span lang="fr">Compositions parfumées, ingrédient créé préalablement par un parfumeur et qui contient, lui même, plusieurs ingrédients.</span>
           <span lang="en">Perfumed compositions, an ingredient created by a perfumer and which also contains several ingredients.</span>
