--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -265,10 +265,10 @@ crossorigin=""/>
         <span lang="en">Plant-sourced raw materials are divided in a few categories :</span>
 
         <ol class="ingredientnat" type="A">
-          <li class="catégories">
+          <h3><li class="catégories">
             <span lang="fr">Les huiles essentielles :</span>
             <span lang="en">Essential oils :</span>
-          </li>
+          </li></h3>
             <ol>
               <li class="catégories2">
                 <span lang="fr">Les distillations :</span>
