--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -265,10 +265,12 @@ crossorigin=""/>
         <span lang="en">Plant-sourced raw materials are divided in a few categories :</span>
 
         <ol class="ingredientnat" type="A">
-          <h3><li class="catégories">
+          <li class="catégories">
+            <h3>
             <span lang="fr">Les huiles essentielles :</span>
             <span lang="en">Essential oils :</span>
-          </li></h3>
+            </h3>
+          </li>
             <ol>
               <li class="catégories2">
                 <span lang="fr">Les distillations :</span>
