--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -266,10 +266,10 @@ crossorigin=""/>
 
         <ol class="ingredientnat" type="A">
           <li class="catégories">
-            <h3>
+            <h2 class="maskedtitle">
             <span lang="fr">Les huiles essentielles :</span>
             <span lang="en">Essential oils :</span>
-            </h3>
+            </h2>
           </li>
             <ol>
               <li class="catégories2">
